Several updates in dashboard

--- a/BillSplit/styleLogin.css
+++ b/BillSplit/styleLogin.css
@@ -1,7 +1,5 @@
 body {
-	background-image: url("images/background.jpg");
-	background-position: center;
-    background-repeat: no-repeat;
+	background-image: url("images/white.jpg");
 }
 
 #logo{
