--- a/BillSplit/style.css
+++ b/BillSplit/style.css
@@ -6,11 +6,8 @@
 .register {
 	border-radius: 10px;
 	float: left;
-	position: absolute;
 	top: 30%;
 	left: 47%;
-	margin-top: -50px;
-	margin-left: -100px;
 	padding: 30px;
 	text-align: center;
 	background: rgba(0,0,0,.50);
@@ -23,16 +20,18 @@ margin: 10px;
 }
 
 table, td, th {
-  border: 1px solid black;
+  border: 1px solid grey;
   padding: 5px;
+  font-family: 'Segoe UI';
 } 
 
 table {
   border-collapse: collapse;
+  width:100%;
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2
+  background-color: #f0f9ff;
 }
 
 #header {
@@ -51,4 +50,59 @@ tr:nth-child(even) {
 	font-size:15px;
 	border: none;
 	padding-top:7px;
+	cursor:pointer;
 }
+
+#mainContainer{
+	width: 90%;
+	margin:auto;
+}
+
+#left{
+	width: 35%;
+	height: 500px;
+	background-color:lightgrey;
+	float:left;
+}
+
+#right{
+	width: 60%;
+	float:right;
+}
+
+#people{
+	width: 45%;
+	height: 350px;
+	float:left;
+	background-color: lightblue;
+	padding:10px;
+}
+
+#addPayment{
+	width: 45%;
+	height: 350px;
+	float:right;
+	background-color: lightblue;
+	padding:10px;
+}
+
+.profilePicture{
+	width:200px;
+	margin-left:10%;
+	margin-top:15px;
+	border-radius:100%;
+}
+
+#welcomeMessage{
+	margin-left:10%;
+	font-family:'Segoe UI'
+}
+
+.font{
+	font-family:'Segoe UI';
+}
+
+#personalInfo{
+	margin-left:10%;
+}
+
