--- a/BillSplit/style.css
+++ b/BillSplit/style.css
@@ -1,3 +1,4 @@
+
 #logo{
 	width: 150px;
 	height: 35px;
@@ -48,7 +49,9 @@ tr:nth-child(even) {
 #logout{
 	float:right;
 }
-
+#settings{
+	float:right;
+}
 #logoutButton{
 	background-color:white;
 	color: #04B6CF;
@@ -56,6 +59,16 @@ tr:nth-child(even) {
 	border: none;
 	padding-top:7px;
 	cursor:pointer;
+}
+
+#settingsButton{
+	background-color:white;
+	color: #04B6CF;
+	font-size:15px;
+	border: none;
+	padding-top:7px;
+	cursor:pointer;
+	float:right;
 }
 
 #mainContainer{
@@ -87,7 +100,7 @@ tr:nth-child(even) {
 
 #addPayment{
 	width: 45%;
-	height: 350px;
+	height: 250px;
 	float:right;
 	background-color: lightblue;
 	padding:10px;
